<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Gifters Club</string>
    <string name="leaderboard">Gifters</string>
    <string name="create_post">Create a Post</string>
    <string name="select_photos_videos">Upload Photos &amp; Videos</string>
    <string name="next">Next</string>
    <string name="edit_media">Edit Media</string>
    <string name="post">Post</string>
    <string name="whats_on_your_mind">What is on your mind?</string>
    <string name="close">Close</string>
    <string name="create_wishlist">Create Wishlist</string>
    <string name="edit_wishlist">Edit Wishlist</string>
    <string name="save_changes">Save Changes</string>
    <string name="delete_wishlist">Delete Wishlist</string>
    <string name="wishlist_name_hint">Wishlist Name</string>
    <string name="wishlist_description_hint">Description</string>
    <string name="wishlist_link_hint">External Link (Optional)</string>
    <string name="wishlist_image_hint">Cover Image URL (Optional)</string>
    <string name="wishlist_tokens_hint">Tokens</string>
    <string name="good_to_know_message">Good to know: you can add specific gift items to your wishlist after creating it.</string>
    <string name="created_on">Created on %1$s</string>
    <string name="share_wishlist">Share wishlist</string>
    <string name="contributors_title">Contributors</string>
    <string name="progress">Progress</string>
    <string name="material_hour_24h_suffix"><xliff:g id="number">%1$s</xliff:g><xliff:g id="suffix">%2$s</xliff:g></string>
    <string name="material_hour_suffix"><xliff:g id="number">%1$s</xliff:g> o\'clock</string>
    <string name="user_avatar">User avatar</string>
    <string name="like">Like</string>
    <string name="comment">Comment</string>
    <string name="share">Share</string>
    <string name="share_profile">Share Profile</string>
    <string name="logout">Logout</string>
    <string name="no_comments_yet">No comments yet. Be the first to comment!</string>
    <string name="settings">Settings</string>
    <string name="conversations">Conversations</string>
    <string name="notifications">Notifications</string>
    <string name="home">Home</string>
    <string name="friends">Friends</string>
    <string name="explore">Explore</string>
    <string name="create">Create</string>
    <string name="inbox">Inbox</string>
    <string name="chats">Chats</string>
    <string name="profile">Profile</string>
    <string name="new_followers">New followers</string>
    <string name="activity">Activity</string>
    <string name="system_notifications">System notifications</string>
    <string name="my_followers">My followers</string>
    <string name="my_gifters">My gifters</string>
    <string name="my_following">My following</string>
    <string name="empty_my_followers">Your followers will show up here</string>
    <string name="empty_my_gifters">you haven\'t been gifted yet, check out the leaderboard for gifters</string>
    <string name="empty_my_following">People you follow will appear here</string>
    <string name="new_followers_preview">You have new followers</string>
    <string name="activity_preview">You have new gifts &amp; post interactions</string>
    <string name="system_notifications_preview" tools:ignore="TypographyEllipsis">Your token purchase ...</string>
    <string name="empty_chat_message">Your chats will appear here</string>
    <string name="header_followers_count">You have %1$d new followers today</string>
    <string name="header_followers_none">You have no new followers today</string>
    <string name="header_activity_count">You have %1$d new gifts today</string>
    <string name="header_activity_none">You have no new gifts today</string>
    <string name="header_system_none">Nothing to see here</string>
    <string name="wishlist">Wishlist</string>
    <string name="send">Send</string>
    <string name="chat_with_user">Chat</string>
    <string name="chat">Chat</string>
    <string name="type_a_message" tools:ignore="TypographyEllipsis">Type a message...</string>
    <string name="attach">Attach</string>
    <string name="notification_message">Notification message</string>
    <string name="_2h_ago">2h ago</string>
    <string name="buy_tokens">Buy Tokens</string>
    <string name="filter_none">None</string>
    <string name="filter_gray">Gray</string>
    <string name="filter_sepia">Sepia</string>
    <string name="apply_filter">Apply filter</string>
    <string name="preview">Preview</string>
    <string name="enter_token_amount">Enter token amount</string>
    <string name="invalid_amount">Please enter a valid amount</string>
    <string name="failed_to_initiate_purchase">Failed to initiate token purchase</string>
    <string name="search_wishlists">Search wishlists…</string>
    <string name="no_wishlists_found">No wishlists found</string>
    <string name="withdrawals">Withdrawals</string>
    <string name="buy">Buy</string>
    <string name="follow">Follow</string>
    <string name="full_name">Full Name</string>
    <string name="username">username</string>
    <string name="received">Received</string>
    <string name="sent">Sent</string>
    <string name="token_icon">Token Icon</string>
    <string name="tokens">Tokens</string>
    <string name="fulfilled">Fulfilled</string>
    <string name="open">Open</string>
    <string name="subscribe_to_view">Subscribe to view</string>
    <string name="purchase_to_view">Purchase to view</string>
    <string name="login_to_proceed">Please login to proceed.</string>
    <string name="subscription_successful">Subscription successful!</string>
    <string name="subscription_failed">Subscription failed</string>
    <string name="purchase_successful">Purchase successful!</string>
    <string name="purchase_failed">Purchase failed</string>
    <string name="subscribe_to_creator">Subscribe to creator</string>
    <string name="subscribing_ellipsis">Subscribing...</string>
    <string name="unlock">Unlock</string>
    <string name="subscription_type_hint">Subscription type (one_time, monthly, annual)</string>
    <string name="subscribe">Subscribe</string>
    <string name="purchase_access">Purchase access</string>
    <string name="purchasing_ellipsis">Purchasing...</string>
    <string name="purchase_for_tokens">Purchase access for %1$d tokens?</string>
    <string name="balance">Balance</string>
    <string name="gift_icon">Gift Icon</string>
    <string name="wishlist_icon">Wishlist Icon</string>
    <string name="switch_camera">Switch camera</string>
    <string name="mute_microphone">Mute microphone</string>
    <string name="toggle_flash">Toggle flash</string>
    <string name="set_recording_timer">Set recording timer</string>
    <string name="show_filters">Show filters</string>
    <string name="capture">Capture</string>
    <string name="select_from_device">Select from device</string>
    <string name="toggle_photo_video">Toggle photo/video</string>
    <string name="enter_text">Enter text</string>
    <string name="colors">Colors</string>
    <string name="text_color">A</string>
    <string name="background_color">BG Color</string>
    <string name="bg_image">BG Image</string>
    <string name="font">Font</string>
    <string name="ok">OK</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="who_can_view_this_post">Who can view this post</string>
    <string name="crop">Crop</string>
    <string name="scale">Scale</string>
    <string name="free">Free</string>
    <string name="subscriber_only">Subscriber Only</string>
    <string name="paid">Paid</string>
    <string name="price_tokens">Price (tokens)</string>
    <string name="create_text_post">Create text post</string>
    <string name="_60s">60s</string>
    <string name="_15s">15s</string>
    <string name="_5s">5s</string>
    <string name="_10m">10m</string>
    <string name="zoom_not_supported">Zoom %1$.1fx not supported</string>
    <string name="write_a_comment" tools:ignore="TypographyEllipsis">Write a comment...</string>
    <string name="recharge">Recharge</string>
    <string name="streamer_name">Streamer Name</string>
    <string name="gift_sent_success">Gift sent successfully</string>
    <string name="failed_to_send_gift">Failed to send gift</string>
    <string name="viewers">Viewers</string>
    <string name="no_viewers">No viewers yet</string>
    <string name="scheduled_success">Scheduled!</string>
    <string name="failed_to_schedule">Failed to schedule</string>
    <string name="choose_amount">Choose an amount</string>
    <string name="custom_tokens">Custom tokens</string>
    <string name="tokens_amount">%1$d tokens</string>
    <string name="start_live_stream">Start Live Stream</string>
    <string name="start">Start</string>
    <string name="permission_denied">Camera &amp; audio permissions are required</string>
    <string name="stream_title_required">Please enter a stream title</string>
    <string name="failed_start_stream">Unable to start stream</string>
    <string name="stream_title">Welcome to my live</string>
    <string name="stream_description_optional">Description (optional)</string>
    <string name="stream_not_found">Live stream not found.</string>
    <string name="error_loading_stream">Failed to load the live stream.</string>
    <string name="failed_to_start_live_stream_generic">Failed to start live stream.</string>
    <string name="live_paywall_paid_message">Unlock this live stream for %1$d tokens.</string>
    <string name="live_paywall_subscription_message">This live stream requires the %1$s plan.</string>
    <string name="live_paywall_paid_hint">Unlock this live stream to watch and listen.</string>
    <string name="live_paywall_sub_hint">Subscribe to join and support the creator.</string>
    <string name="live_paywall_feed_paid">Unlock with tokens to watch this live stream.</string>
    <string name="live_paywall_feed_sub">Subscribe to watch this live stream.</string>
    <string name="failed_to_unlock_live">Unable to unlock the live stream.</string>
    <string name="live_host_banner_text">You are live – tap to return to your stream</string>
    <string name="end_live_stream">End Live Stream?</string>
    <string name="confirm_end_live_stream">Are you sure you want to end the live stream?</string>
    <string name="end_live">End Live</string>
    <string name="failed_end_stream">Failed to end stream</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="you_have_3_new_gifts">You have 3 new gifts</string>
    <string name="you_have_n_gifts_today">You have %1$d new gifts today</string>
    <string name="you_have_n_contribs_today">You have %1$d wishlist contributions today</string>
    <string name="no_activity_today">no activity today</string>
    <string name="top_gifters">Top Gifters</string>
    <string name="wishlist_image">Wishlist Image</string>
    <string name="wishlist_name">Wishlist Name</string>
    <string name="description">Description</string>
    <string name="favicon">favicon</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="gifters_club">Gifters Club</string>
    <string name="share_joy_spread_love">Share joy, spread love</string>
    <string name="connect_with_friends_and_celebrate_together">Connect with friends and celebrate together</string>
    <string name="by_continuing_you_agree_to_our_terms_of_service_and_privacy_policy">By continuing, you agree to our Terms of Service and Privacy Policy</string>
    <string name="contribute_tokens">Contribute Tokens</string>
    <string name="enter_amount">Enter amount</string>
    <string name="contribute">Contribute</string>
    <string name="_100">100</string>
    <string name="you_haven_t_created_any_wishlist_yet">You haven\'t created any wishlist yet</string>
</resources>