<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="32dp">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        app:cardCornerRadius="10dp">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/bg_pink_indigo_gradient"
            android:contentDescription="@string/favicon"
            android:src="@drawable/ic_heart_red" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gifters_club"
        android:textColor="@color/pink_500"
        android:textSize="50sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share_joy_spread_love"
        android:textColor="@color/slate_500"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connect_with_friends_and_celebrate_together"
        android:textColor="@color/slate_400"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="30dp"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@color/blue_200"
                android:contentDescription="@string/gift_icon"
                android:padding="10dp"
                android:src="@drawable/gift" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            app:cardCornerRadius="10dp">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@color/blue_200"
                android:contentDescription="@string/gift_icon"
                android:padding="10dp"
                android:src="@drawable/wishlist" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@color/blue_200"
                android:contentDescription="@string/gift_icon"
                android:padding="10dp"
                android:src="@drawable/ic_heart_red" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>


    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/slate_200"
            android:gravity="center_vertical"
            android:paddingHorizontal="30dp"
            android:paddingVertical="10dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/favicon"
                android:src="@drawable/google" />

            <Button
                android:id="@+id/buttonSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@android:color/transparent"
                android:text="@string/continue_with_google" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:text="@string/by_continuing_you_agree_to_our_terms_of_service_and_privacy_policy"
        android:textAlignment="center"
        android:textColor="@color/slate_400"
        android:textSize="11sp" />

</LinearLayout>