<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp">

        <EditText
            android:id="@+id/etSearchWishlists"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search_wishlists"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:padding="8dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvWishlists"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="8dp" />

        <LinearLayout
            android:id="@+id/tvEmptyWishlists"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="20dp"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center">
            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/wishlist"
                android:layout_marginVertical="10dp"
                android:contentDescription="@string/wishlist_icon" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:text="@string/no_wishlists_found" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_marginVertical="20dp"
                android:text="@string/you_haven_t_created_any_wishlist_yet" />
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                app:cardCornerRadius="10dp">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_wishlist"
                    android:background="@color/pink_500"
                    android:textColor="@color/white"
                    android:paddingHorizontal="40dp"
                    android:id="@+id/btnCreateWishlist" />
            </androidx.cardview.widget.CardView>
            
        </LinearLayout>
    </LinearLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabCreateWishlist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        app:srcCompat="@android:drawable/ic_input_add"
        android:contentDescription="@string/create_wishlist" />

</FrameLayout>