<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/createPostRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <FrameLayout
        android:id="@+id/flStepContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <!-- Media selection step -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutMedia"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvSelectedCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:gravity="center"
                android:layout_marginTop="28dp"
                app:layout_constraintTop_toTopOf="@id/layoutMedia"
                app:layout_constraintStart_toStartOf="@id/layoutMedia"
                app:layout_constraintEnd_toEndOf="@id/layoutMedia"/>

            <HorizontalScrollView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:foregroundGravity="center_vertical"
                app:layout_constraintStart_toStartOf="@id/layoutMedia"
                app:layout_constraintEnd_toEndOf="@id/layoutMedia"
                app:layout_constraintTop_toBottomOf="@id/tvSelectedCount"
                app:layout_constraintBottom_toTopOf="@id/btnSelectMedia">

                <LinearLayout
                    android:id="@+id/layoutPreviews"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_gravity="center_vertical"
                    android:foregroundGravity="center_vertical"
                    android:orientation="horizontal" />
            </HorizontalScrollView>

            <Button
                android:id="@+id/btnSelectMedia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_photos_videos"
                app:layout_constraintStart_toStartOf="@id/layoutMedia"
                app:layout_constraintEnd_toEndOf="@id/layoutMedia"
                app:layout_constraintBottom_toTopOf="@id/btnNext"/>

            <Button
                android:id="@+id/btnNext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:layout_marginTop="16dp"
                android:enabled="false"
                app:layout_constraintStart_toStartOf="@id/layoutMedia"
                app:layout_constraintEnd_toEndOf="@id/layoutMedia"
                app:layout_constraintBottom_toBottomOf="@id/layoutMedia"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Edit media step -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutEdit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone"
            >

            <ImageView
                android:id="@+id/imageEditView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:scaleType="centerCrop"
                app:layout_constraintTop_toTopOf="@id/layoutEdit"
                app:layout_constraintStart_toStartOf="@id/layoutEdit"
                app:layout_constraintEnd_toEndOf="@id/layoutEdit"
                app:layout_constraintBottom_toBottomOf="@id/layoutEdit"/>

            <LinearLayout
                android:id="@+id/filterButtonsContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="@id/layoutEdit"
                app:layout_constraintBottom_toTopOf="@id/btnApplyFilter">

                <Button
                    android:id="@+id/btnFilterNone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_none" />

                <Button
                    android:id="@+id/btnFilterGray"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/filter_gray" />

                <Button
                    android:id="@+id/btnFilterSepia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/filter_sepia" />

            </LinearLayout>

            <Button
                android:id="@+id/btnApplyFilter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/apply_filter"
                app:layout_constraintStart_toStartOf="@id/layoutEdit"
                app:layout_constraintEnd_toEndOf="@id/layoutEdit"
                app:layout_constraintBottom_toBottomOf="@id/layoutEdit" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Details step -->
        <LinearLayout
            android:id="@+id/layoutDetails"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="30dp"
            android:visibility="gone">

            <EditText
                android:id="@+id/etContent"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:hint="@string/whats_on_your_mind"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:padding="8dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="end"
                android:layout_marginTop="8dp">

                <Button
                    android:id="@+id/btnEditMedia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_media" />

                <Button
                    android:id="@+id/btnPost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/post"
                    android:layout_marginStart="16dp" />

            </LinearLayout>

        </LinearLayout>

    </FrameLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

</LinearLayout>